--- a/Projeto-03-StockTrader/stock-trader/package.json
+++ b/Projeto-03-StockTrader/stock-trader/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "vue": "^2.5.21",
     "vue-router": "^3.5.1",
-    "vuetify": "^1.3.0"
+    "vuetify": "^1.3.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
